Fix issues with Homepage scroll and image overflow

--- a/src/public/less/components/landing-bottom.less
+++ b/src/public/less/components/landing-bottom.less
@@ -853,12 +853,13 @@
 				display: block;
 				width: 100%;
 				height: 100%;
+				bottom: -10px;
+				left: -5px;
+				overflow: hidden;
 
 				>svg {
 					position: absolute;
 					z-index: 1;
-					bottom: -10px;
-					left: -5px;
 				}
 			}
 		}
@@ -1179,6 +1180,7 @@
 					width: 100%;
 					padding-bottom: 0;
 					justify-content: space-between;
+					overflow-x: hidden;
 				}
 
 				@media (min-width: @screen-lg-min) {
